--- a/theme/default/common/header.twig
+++ b/theme/default/common/header.twig
@@ -43,6 +43,7 @@
                 <li><a href="/guestbook">Гостевая книга</a></li>
                 <li><a href="/delivery">Доставка</a></li>
                 <li><a href="/about">О нас</a></li>
+                <li><a href="/quiz">Квиз</a></li>
                 <li><a href="/contacts">Контакты</a></li>
             </ul>
         </div>
