fix cursor pointer

--- a/src/Template/mixin/quiz.twig
+++ b/src/Template/mixin/quiz.twig
@@ -14,7 +14,8 @@ steps - collection
                     display: none;
                 }
 
-                [id="quiz-{{ quizId }}"] [data-option] [data-label] {
+                [id="quiz-{{ quizId }}"] [data-option] [data-label],
+                [id="quiz-{{ quizId }}"] [data-step-list].list-group-item-secondary {
                     cursor: pointer;
                 }
 
