--- a/src/Template/cup/editor/index-aside.twig
+++ b/src/Template/cup/editor/index-aside.twig
@@ -1,6 +1,7 @@
 <div class="page-aside bg-grey1">
     <style>
         .page-aside {
+            min-width: 280px;
             min-height: calc(100vh - 62px - 15px) !important;
             padding-bottom: 0 !important;
         }
