--- a/src/Template/cup/editor/index.twig
+++ b/src/Template/cup/editor/index.twig
@@ -26,6 +26,7 @@
 
                     <style>
                         #CodeMirror .CodeMirror {
+                            width: 100% !important;
                             min-height: 86vh !important;
                         }
                         #CodeMirror style + .form-group {
