--- a/src/Template/cup/auth/login.twig
+++ b/src/Template/cup/auth/login.twig
@@ -13,25 +13,11 @@
                     <h3 class="text-center">Вход в панель администратора</h3>
                     <div class="login-form">
                         <form method="post" data-grecaptcha>
-                            {% if identifier == 'email' %}
-                                {% include 'cup/form.twig' with {
-                                    'label': 'E-Mail',
-                                    'type': 'email',
-                                    'name': 'email'
-                                } %}
-                            {% elseif identifier == 'username' %}
-                                {% include 'cup/form.twig' with {
-                                    'label': 'Логин',
-                                    'type': 'text',
-                                    'name': 'username'
-                                } %}
-                            {% else %}
-                                {% include 'cup/form.twig' with {
-                                    'label': 'Телефон',
-                                    'type': 'text',
-                                    'name': 'phone'
-                                } %}
-                            {% endif %}
+                            {% include 'cup/form.twig' with {
+                                'label': 'Логин/E-Mail/Телефон',
+                                'type': 'text',
+                                'name': 'identifier'
+                            } %}
 
                             {% include 'cup/form.twig' with {
                                 'label': 'Пароль',
