fix ready event

--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -146,7 +146,7 @@
                     }
 
                     // ready
-                    triggerEvent('ready', cart);
+                    setTimeout(() => triggerEvent('ready', cart), 10);
                 }
 
                 /**
