--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -1209,6 +1209,7 @@
                     </div>
                     <div class="card-action">
                         <button type="submit" class="btn btn-primary">Сохранить</button>
+                        <a href="/cup/system" class="btn btn-outline-danger btn-round float-right">Установка и обновление</a>
                     </div>
                 </form>
             </div>
