--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ parameter('common_lang', 'ru') }}">
-    <!-- OpenSource WebSpace Engine CMS (Full free for all) -->
-    <!-- GitHub: https://github.com/getwebspace -->
+    <!-- Copyright © 2011-{{ 'now'|df('Y') }} WebSpace Engine — OpenSource WebSpace Engine CMS -->
+    <!-- Website: https://getwebspace.org -->
 
     <head>
         <meta charset="utf-8">
